--- a/Menu.properties
+++ b/Menu.properties
@@ -4,11 +4,24 @@ FontColor=0xFFFFFF
 
 #Fonts
 FontName=Golden-Sun
-TitleSize=50
+TitleSize=70
 ButtonFontSize=30
 TextSize=15
 
-#Buttons
+TitleY=110
 
+#Buttons
+buttonWidth=200
+buttonHeight=70
+
+button1Y=245
+button2Y=325
+button3Y=405
+button4Y=485
+
+StartButton=Start
+RankingButton=Ranking
+HelpButton=Pomoc
+ExitButton=Koniec
 
 
